# rug-clone

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  RELEASES.md  before-content-c.html  before-content.html  build.rs  coverage.sh  doc.sh  extract_doc_tests.sh  gen.sh  index.md  rustfmt.toml  test-gitlab-ci.sh  test.sh
com/: Cargo.toml
com/src/: lib.rs  small_complex.rs
doc-src/: index.md
etc/: appveyor.yml  coverage.sh  extract-doc-tests.sh  gitlab-ci.yml  index.html  invoke-tarpaulin.sh  test-gitlab-ci.sh  test.sh  tidy.sh
flo/src/: small_float.rs  xmpfr.rs
int/: README.md
int/src/: small_integer.rs
rat/src/: rational.rs
src/: api.txt  big_complex.rs  big_float.rs  big_integer.rs  big_rational.rs  cast.rs  complex.rs  float.rs  inner.rs  integer.rs  lib.rs  macros.rs  misc.rs  ops.rs  ops_prim.rs  rand.rs  rational.rs  serdeize.rs  small_complex.rs  small_float.rs  small_rational.rs  xgmp.rs  xmpc.rs  xmpfr.rs
src/complex/: README.md  arith.rs  big.rs  big_complex.rs  borrow.rs  cmp.rs  complex.rs  impl_num_traits.rs  mod.rs  ord.rs  ord_complex.rs  serde.rs  small.rs  small_complex.rs  tests.rs  traits.rs  xmpc.rs
src/ext/: gmp.rs  gmp32.rs  gmp64.rs  gmpq.rs  mod.rs  mpc.rs  mpfr.rs  xmpc.rs  xmpfr.rs  xmpq.rs  xmpz.rs  xmpz32.rs  xmpz64.rs
src/float/: arith.rs  big.rs  big_float.rs  borrow.rs  casts.rs  cmp.rs  float.rs  impl_num_traits.rs  mod.rs  ord.rs  ord_float.rs  serde.rs  small.rs  small_float.rs  tests.rs  traits.rs  xmpfr.rs
src/integer/: arith.rs  big.rs  big_integer.rs  borrow.rs  casts.rs  cmp.rs  division.rs  impl_num_traits.rs  integer.rs  long64.rs  mod.rs  serde.rs  small.rs  small_integer.rs  tests.rs  traits.rs  xgmp.rs
src/rational/: arith.rs  big.rs  big_rational.rs  borrow.rs  casts.rs  cmp.rs  impl_num_traits.rs  mod.rs  rational.rs  serde.rs  small.rs  small_rational.rs  tests.rs  traits.rs  xgmp.rs
