# Copyright © 2016–2017 University of Malta

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License and a copy of the GNU General Public License along with this
# program. If not, see <http://www.gnu.org/licenses/>.

[package]
name = "rug"
version = "0.4.0"
authors = ["Trevor Spiteri <trevor.spiteri@um.edu.mt>"]
description = "Arbitrary-precision big numbers based on GMP, MPFR and MPC"
documentation = "https://tspiteri.gitlab.io/rug/rug/"
repository = "https://gitlab.com/tspiteri/rug"
readme = "README.md"
keywords = ["gmp", "mpfr", "mpc", "mathematics", "numerics"]
categories = ["api-bindings", "science"]
license = "LGPL-3.0+"

[features]
default = ["rational", "float", "complex"]
rational = []
float = ["gmp-mpfr-sys/mpfr"]
complex = ["float", "gmp-mpfr-sys/mpfr", "gmp-mpfr-sys/mpc"]

[dependencies.gmp-mpfr-sys]
version = "1.0.4"
default-features = false
path = "../gmp-mpfr-sys"
